--- a/aclap/src/app/components/app.component.tns.scss
+++ b/aclap/src/app/components/app.component.tns.scss
@@ -12,6 +12,7 @@ $l-grey: #d3d8d8;
     border-radius: 4;
     height: 40;
     width: 160;
+    font-family: 'Proxima_Bold', 'Proxima_Bold';
 }
 
 .btn-nav:active{
@@ -26,7 +27,8 @@ $l-grey: #d3d8d8;
 .text-nav{
     color: #d3d8d8;
     font-size: 14;
-    margin-left: 28;
+    margin-left: 45;
+    font-family: 'Proxima_Bold', 'Proxima_Bold';
 }
 
 .img-header{
