--- a/aclap/src/app/components/event-shared/events/events.component.tns.scss
+++ b/aclap/src/app/components/event-shared/events/events.component.tns.scss
@@ -39,6 +39,15 @@ $l-grey: #d3d8d8;
     text-align: center;
 }
 
+.credit-text{
+    font-size: 10;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    text-align: right;
+    margin-top: 30;
+    margin-right: 5;
+}
+
 .body-text{
     font-size: 14;
     color: rgb(0, 0, 0);
