--- a/aclap/src/app/components/home/home.component.tns.html
+++ b/aclap/src/app/components/home/home.component.tns.html
@@ -1,19 +1,25 @@
 <StackLayout>
     <ScrollView orientation="vertical"  height="1000">
         <StackLayout orientation="vertical">
+
             <gridlayout rows="*, *, *, *" columns="*" backgroundColor="black">
-                <Image rowspan="3" col="0" src="res://biolley_cielo" stretch="aspectFill" class="banner-img"></Image>
-                <Label row="1" col="0" text="Conoce ACLA-P Educa" class="header-text" textWrap="true"></Label>
+                <Image rowspan="5" col="0" src="res://banner_home" stretch="aspectFill" class="banner-img"></Image>
+                <Label row="2" col="0" text="Conoce ACLA-P Educa" class="header-text" textWrap="true"></Label>
+                <Label row="5" col="0" text="Fotógrafo: Giancarlo Pucci" class="credit-text" textWrap="true"></Label>
             </gridlayout>
+
             <Label
             text= "El Programa de Educación Ambiental del Área de Conservación La Amistad Pacífico (ACLA-P), es un esfuerzo colectivo de la institución, sus funcionarios y funcionarias, en conjunto con personas líderes comunales, organizaciones de base, sector científico y organismos internacionales. Los aportes de todos y todas se concretan en esta plataforma de herramientas de educación ambiental, con el fin de continuar compartiendo la responsabilidad por conservar los tesoros naturales de Costa Rica."
             class= "body-text" textWrap="true" ></Label>
+
             <Label
-            text= "Explora los módulos educativos que tenemos para compartir, celebra las efemérides ambientales más queridas de nuestra institución, y cuéntanos cómo utilizas estas herramientas para la construcción de una cultura ambiental.  Todos y cada uno de estos aportes suman hacia el desarrollo sostenible local y global."
+            text= "Explora los módulos educativos que tenemos para compartir, celebra las efemérides ambientales más queridas de nuestra institución, y cuéntanos cómo utilizas estas herramientas para la construcción de una cultura ambiental.  Todos y cada uno de estos aportes suman hacia el desarrollo sostenible local y global. "
             class= "body-text" textWrap="true" ></Label>
+
             <Button text="¿Qué significa ser una persona educadora?" class="nav-btn" (tap)="navigateToEducatorApplication()"></Button>
             <Button text="Módulos educativos" class="nav-btn" (tap)="navigateToModules()"></Button>
             <Button text="Eventos" class="nav-btn" (tap)="navigateToEvents()"></Button>
+
         </StackLayout>
     </ScrollView>
 </StackLayout>
