--- a/aclap/src/app/components/home/home.component.tns.scss
+++ b/aclap/src/app/components/home/home.component.tns.scss
@@ -10,10 +10,12 @@ $l-grey: #d3d8d8;
     font-weight: bold;
     color: #fff;
     text-align: center;
+    font-family: 'Proxima_Bold', 'Proxima_Bold';
 }
 
 .body-text{
     font-size: 14;
+    font-family: 'Lora_Regular', 'Lora_Regular';
     color: rgb(0, 0, 0);
     text-align: center;
     margin-left: 10;
@@ -22,8 +24,18 @@ $l-grey: #d3d8d8;
     margin-top: 5;
 }
 
+.credit-text{
+    font-size: 10;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    text-align: right;
+    margin-top: 30;
+    margin-right: 5;
+    font-family: 'Proxima_Bold', 'Proxima_Bold';
+}
+
 .banner-img{
-    opacity: 0.85;
+    opacity: 0.75;
 }
 
 .nav-btn{
@@ -31,9 +43,11 @@ $l-grey: #d3d8d8;
     border-radius: 20;
     color: whitesmoke;
     font-size: 18;
+    font-family: 'Proxima_Bold', 'Proxima_Bold';
     font-weight: bold;
     width: auto;
     height: 100;
     margin-left: 30;
     margin-right: 30;
 }
+
