--- a/aclap/src/app/components/profile-shared/educator-application/educator-application.component.tns.html
+++ b/aclap/src/app/components/profile-shared/educator-application/educator-application.component.tns.html
@@ -2,10 +2,12 @@
     <ScrollView orientation="vertical"  height="1000">
         <StackLayout>
 
-            <GridLayout rows="*, *, *, *" columns="*" backgroundColor="black">
-                <Image rowspan="3" row="0" col="0" stretch="aspectFill" src="res://biolley_asoprala" class="img-banner"></Image>
-                <Label row="1" col="0" text="Persona Educadora" class="header-text" textWrap="true"></Label>
-            </GridLayout>
+            <gridlayout rows="*, *, *, *" columns="*" backgroundColor="black">
+                <Image rowspan="5" col="0" src="res://banner_educator" stretch="aspectFill" class="banner-img"></Image>
+                <Label row="2" col="0" text="Persona Educadora" class="header-text" textWrap="true"></Label>
+                <Label row="5" col="0" text="Fotógrafo: Giancarlo Pucci" class="credit-text" textWrap="true"></Label>
+            </gridlayout>
+
 
             <Label text="Las personas que realizan actividades de educación ambiental en el Área de Conservación La Amistad Pacífico pueden registrarse en esta plataforma para compartir sus logros al utilizar nuestras herramientas de educación ambiental y contribuir en el mejoramiento continuo de nuestro programa."
             class="text-body" textWrap="true" ></Label>
