--- a/aclap/src/app/components/profile-shared/implementation-display/implementation-display.component.html
+++ b/aclap/src/app/components/profile-shared/implementation-display/implementation-display.component.html
@@ -37,7 +37,7 @@
             </div>
             <div class="row">
                 <div class="col-6">
-                    <span>Número de participantes: {{implementation.participants}} </span>
+                    <span>Número de participantes: {{implementation.otherParticipants}} </span>
                 </div>  
                 <div class="col-6">
                     <span>Fecha: {{ implementation.date}} </span>
