--- a/aclap/src/app/components/section-shared/display/display-paragraph/display-paragraph.component.tns.html
+++ b/aclap/src/app/components/section-shared/display/display-paragraph/display-paragraph.component.tns.html
@@ -1,1 +1,11 @@
-<Button text="display-paragraph works!" class="btn btn-primary"></Button>
+<StackLayout>
+    <ScrollView orientation="vertical"  height="1000">
+        <StackLayout orientation="vertical">
+
+            <Label text="Manejo de contraseña" textWrap="true" class="header-text" backgroundColor="#1c81a9"></Label>
+
+            <Label text= "Cambio de contraseña" class= "title-text" textWrap="true" ></Label>
+
+        </StackLayout>
+    </ScrollView>
+</StackLayout>
