--- a/aclap/src/app/components/shared/login/login.component.tns.html
+++ b/aclap/src/app/components/shared/login/login.component.tns.html
@@ -11,7 +11,7 @@
     <Label class="center">
         <FormattedString>
           <Span text="Olvidó su contraseña? "class="password-recov-text"></Span>
-          <Span text="Presione aquí" class="password-recov-text-link"></Span>
+          <Span text="Presione aquí" class="password-recov-text-link" (tap)="changePassword()"></Span>
         </FormattedString>
     </Label>
 
