--- a/aclap/src/app/components/allies-shared/allies/allies.component.tns.scss
+++ b/aclap/src/app/components/allies-shared/allies/allies.component.tns.scss
@@ -10,6 +10,7 @@ $l-grey: #d3d8d8;
     font-weight: bold;
     color: #fff;
     text-align: center;
+    font-family: 'Proxima_Bold', 'Proxima_Bold';
 }
 
 .title-text{
@@ -17,6 +18,7 @@ $l-grey: #d3d8d8;
     font-weight: bold;
     color: rgb(0, 0, 0);
     text-align: center;
+    font-family: 'Proxima_Bold', 'Proxima_Bold';
 }
 
 .body-text{
@@ -27,11 +29,13 @@ $l-grey: #d3d8d8;
     margin-right: 10;
     margin-bottom: 5;
     margin-top: 5;
+    font-family: 'Lora_Regular', 'Lora_Regular';
 }
 
 .logo-img{
     width: 200;
     height: 200;
+    margin-bottom: 10;
 }
 
 .banner-img{
