--- a/aclap/src/app/components/event-shared/events/events.component.tns.html
+++ b/aclap/src/app/components/event-shared/events/events.component.tns.html
@@ -3,25 +3,24 @@
         <StackLayout>
 
             <Gridlayout rows="*, *, *, *" columns="*" backgroundColor="black">
-                <Image rowspan="3" col="0" src="res://corredor_bio_2" stretch="aspectFill" class="img-banner"></Image>
-                <Label row="1" col="0" text="Eventos" class="header-text" textWrap="true"></Label>
+                <Image rowspan="5" col="0" src="res://banner_events" stretch="aspectFill" class="banner-img"></Image>
+                <Label row="2" col="0" text="Eventos" class="header-text" textWrap="true"></Label>
+                <Label row="5" col="0" text="Fotógrafo: Roger González" class="credit-text" textWrap="true"></Label>
             </Gridlayout>
              
             <Label
-            text= "Los módulos son herramientas para la educación ambiental sobre temas de interés para la conservación de los recursos naturales y el desarrollo sostenible de las comunidades."
-            class= "body-text" textWrap="true"></Label>
-
-            <Label
-            text= "Cada módulo incluye una guía didáctica con instrucciones para preparar e implementar las actividades, materiales descargables para lectura, juegos y dinámicas grupales. Todos los materiales pueden ser utilizados libremente por docentes, gestores - gestoras comunales, y personas educadoras de las organizaciones locales."
+            text= "Celebra las efemérides ambientales más queridas de nuestra institución. Organice un evento en su comunidad y comparta sus fotografías y aprendizajes con nosotros. Cada evento cuenta con sugerencias Todos los materiales pueden ser utilizados libremente por docentes, gestores - gestoras comunales, y personas educadoras de las organizaciones locales."
             class= "body-text" textWrap="true"></Label>
 
             <StackLayout row="3" col="0" *ngFor="let event of events" orientation="vertical">
+
                 <Card:CardView class="cardStyle" margin="10" elevation="10" shadowColor="#FE00FC" shadowOpacity="1" radius="30" ripple=true (tap)="navigateToEvent(event.id)">
                     <StackLayout>
                         <Image src="{{ event.imageUrl }}" stretch="aspectFill"></Image>
                         <Label text="{{ event.name }}" class="module-header-text" textWrap="true"></Label>
                     </StackLayout>
                 </Card:CardView>
+
             </StackLayout>
 
         </StackLayout>
