--- a/aclap/src/app/components/module-shared/module-page/module-page.component.tns.scss
+++ b/aclap/src/app/components/module-shared/module-page/module-page.component.tns.scss
@@ -10,6 +10,7 @@ $l-grey: #d3d8d8;
     font-weight: bold;
     color: #fff;
     text-align: center;
+    font-family: 'Proxima_Bold', 'Proxima_Bold';
 }
 
 .body-text-backgrounds{
@@ -19,6 +20,7 @@ $l-grey: #d3d8d8;
     margin-left: 5;
     margin-right: 5;
     margin-bottom: 5;
+    font-family: 'Lora_Regular', 'Lora_Regular';
 }
 
 .body-text-objectives{
@@ -28,6 +30,7 @@ $l-grey: #d3d8d8;
     margin-left: 5;
     margin-right: 5;
     margin-bottom: 5;
+    font-family: 'Lora_Regular', 'Lora_Regular';
 }
 
 .title-text{
@@ -35,6 +38,7 @@ $l-grey: #d3d8d8;
     font-weight: bold;
     color: rgb(0, 0, 0);
     text-align: center;
+    font-family: 'Proxima_Bold', 'Proxima_Bold';
 }
 
 .subtitle-age-text{
@@ -44,6 +48,7 @@ $l-grey: #d3d8d8;
     text-align: center;
     margin-top: 8;
     margin-left: 5;
+    font-family: 'Proxima_Bold', 'Proxima_Bold';
 }
 
 .subtitle-theme-text{
@@ -53,6 +58,7 @@ $l-grey: #d3d8d8;
     text-align: center;
     margin-top: 10;
     margin-left: 5;
+    font-family: 'Proxima_Bold', 'Proxima_Bold';
 }
 
 .text-discipline{
@@ -60,12 +66,14 @@ $l-grey: #d3d8d8;
     font-weight: bold;
     color: rgb(0, 0, 0);
     text-align: center;
+    font-family: 'Lora_Regular', 'Lora_Regular';
 }
 
 .text{
     font-size: 12;
     color: rgb(0, 0, 0);
     text-align: center;
+    font-family: 'Lora_Regular', 'Lora_Regular';
 }
 
 .my-button {
@@ -78,9 +86,10 @@ $l-grey: #d3d8d8;
     height: 100;
     margin-left: 30;
     margin-right: 30;
+    font-family: 'Proxima_Bold', 'Proxima_Bold';
 }
 
-.img-banner{
+.banner-img{
     opacity: 0.75;
 }
 
