--- a/aclap/src/app/components/module-shared/modules/modules.component.tns.scss
+++ b/aclap/src/app/components/module-shared/modules/modules.component.tns.scss
@@ -12,18 +12,13 @@ $l-grey: #d3d8d8;
     margin-left: 15;
 }
 
-.cardContent {
-    padding: 20;
-    font-weight: bold;
-    font-size: 12;
-}
-
 .module-header-text {
     font-size: 24;
     font-weight: bold;
     text-align: center;
     color: rgb(0, 0, 0);
     background-color: #fff;
+    font-family: 'Proxima_Bold', 'Proxima_Bold';
 }
 
 .header-text{
@@ -31,12 +26,7 @@ $l-grey: #d3d8d8;
     font-weight: bold;
     color: #fff;
     text-align: center;
-}
-
-.text{
-    font-size: 12;
-    color: rgb(0, 0, 0);
-    text-align: center;
+    font-family: 'Proxima_Bold', 'Proxima_Bold';
 }
 
 .body-text{
@@ -47,9 +37,20 @@ $l-grey: #d3d8d8;
     margin-right: 10;
     margin-bottom: 5;
     margin-top: 5;
+    font-family: 'Lora_Regular', 'Lora_Regular';
 }
 
-.img-banner{
+.credit-text{
+    font-size: 10;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    text-align: right;
+    margin-top: 30;
+    margin-right: 5;
+    font-family: 'Proxima_Bold', 'Proxima_Bold';
+}
+
+.banner-img{
     opacity: 0.75;
 }
 
