--- a/aclap/src/app/components/profile-shared/implementation-edit/implementation-edit.component.tns.html
+++ b/aclap/src/app/components/profile-shared/implementation-edit/implementation-edit.component.tns.html
@@ -5,7 +5,7 @@
             <GridLayout rows="*, *, *, *" columns="*" backgroundColor="black">
                 <Image rowspan="3" row="0" col="0" stretch="aspectFill" src="res://corredor_bio_1" class="img-banner"></Image>
                 <Label row="1" col="0" text="Evaluación del módulo: {{ implementation.implementableName }}" class="header-text" textWrap="true"></Label>
-                <Label row="2" col="0" text="Realizado por: {{ user.name }}" class="madeby-text"  horizontalAlignment="left" textWrap="true"></Label>
+                <Label row="2" col="0" text="Realizado por: {{ user.name }} {{ user.lastname }}" class="madeby-text"  horizontalAlignment="left" textWrap="true"></Label>
             </GridLayout>
 
             <Label text="Formulario" class="text-subtitle-first" textWrap="true"></Label>
@@ -22,21 +22,21 @@
             <Label text="Ubicación:" class="subtitle-text" textWrap="true"></Label>
             <TextField [(ngModel)]="txtAddress" hint="Distrito, Cantón, Provincia" class="input input-border input-form"></TextField>
 
-            <Label text="Participantes" class="subtitle-text-picker" textWrap="true"></Label>
+            <Label text="Participantes" class="first-subtitle-text-picker" textWrap="true"></Label>
 
             <StackLayout orientation="horizontal">
                 <Label text="Femeninos: " class="subtitle-text-picker" textWrap="true"></Label>
-                <ListPicker [(ngModel)]="pickerFparticipants" [items]="participants" selectedIndex="0" class="participant-picker"></ListPicker>
+                <ListPicker [(ngModel)]="pickerFparticipants" [items]="participants" class="participant-picker"></ListPicker>
             </StackLayout>
 
             <StackLayout orientation="horizontal">
                 <Label text="Masculinos: " class="subtitle-text-picker" textWrap="true"></Label>
-                <ListPicker [(ngModel)]="pickerMparticipants" [items]="participants" selectedIndex="0" class="participant-picker"></ListPicker>
+                <ListPicker [(ngModel)]="pickerMparticipants" [items]="participants" class="participant-picker"></ListPicker>
             </StackLayout>
 
             <StackLayout orientation="horizontal">
                 <Label text="Otros: " class="subtitle-text-picker" textWrap="true"></Label>
-                <ListPicker [(ngModel)]="pickerOparticipants" [items]="participants" selectedIndex="0" class="participant-picker"></ListPicker>
+                <ListPicker [(ngModel)]="pickerOparticipants" [items]="participants" class="other-participant-picker"></ListPicker>
             </StackLayout>
 
             <Label text="Preguntas de evaluación" class="title-text-questions" textWrap="true"></Label>
@@ -54,20 +54,20 @@
             <StackLayout *ngFor="let file of files; index as i" orientation="vertical">
 
                 <Card:CardView class="cardStyle" margin="10" elevation="10" shadowColor="#FE00FC" shadowOpacity="1" radius="25" ripple=true>
-                    <StackLayout orientation="horizontal">
+                    <GridLayout rows="*, *" columns="*, 150, *" orientation="horizontal">
 
-                        <StackLayout *ngIf="isImg(file.name)">
+                        <StackLayout rowspan="5" row="0" col="0" *ngIf="isImg(file.name)">
                             <Image src="{{ file.name }}" class="file-img"></Image>
                         </StackLayout>
 
-                        <StackLayout *ngIf="isFile(file.name)">
+                        <StackLayout rowspan="5" row="0" col="0" *ngIf="isFile(file.name)">
                             <Image src="res://file" class="file-img"></Image>
                         </StackLayout>
 
-                        <Label text="{{ file.name }}" class="subtitle-text-file"></Label>
-                        <Button text="x" class="btn btn-primary btn-fileRemover" (tap)="removeOldFile(i)"></Button>
+                        <Label row="2" col="1" text="{{ file.name }}" class="subtitle-text-file"></Label>
+                        <Button row="0" col="2" text="x" class="btn btn-primary btn-fileRemover" (tap)="removeOldFile(i)"></Button>
                     
-                    </StackLayout>
+                    </GridLayout>
                 </Card:CardView>
 
             </StackLayout>
@@ -75,20 +75,20 @@
             <StackLayout *ngFor="let file of fileNames; index as i" orientation="vertical">
 
                 <Card:CardView class="cardStyle" margin="10" elevation="10" shadowColor="#FE00FC" shadowOpacity="1" radius="25" ripple=true>
-                    <StackLayout orientation="horizontal">
+                    <GridLayout rows="*, *" columns="*, 150, *" orientation="horizontal">
 
-                        <StackLayout *ngIf="isImg(file)">
+                        <StackLayout rowspan="5" row="0" col="0" *ngIf="isImg(file)">
                             <Image src="{{ filePaths[i] }}" class="file-img"></Image>
                         </StackLayout>
 
-                        <StackLayout *ngIf="isFile(file)">
+                        <StackLayout rowspan="5" row="0" col="0" *ngIf="isFile(file)">
                             <Image src="res://file" class="file-img"></Image>
                         </StackLayout>
 
-                        <Label text="{{ file }}" class="subtitle-text-file"></Label>
-                        <Button text="x" class="btn btn-primary btn-fileRemover" (tap)="removeFile(i)"></Button>
+                        <Label row="2" col="1" text="{{ file }}" class="subtitle-text-file"></Label>
+                        <Button row="0" col="2" text="x" class="btn btn-primary btn-fileRemover" (tap)="removeFile(i)"></Button>
                     
-                    </StackLayout>
+                    </GridLayout>
                 </Card:CardView>
 
             </StackLayout>
@@ -97,7 +97,7 @@
 
             <StackLayout orientation="horizontal">
                 <Button text="Guardar" class="btn btn-primary btn-save" (tap)="onSubmit('save')"></Button>
-                <Button text="Enviar" class="btn btn-primary btn-send" (tap)="onSubmit('complete')"></Button>
+                <Button text="Finalizar" class="btn btn-primary btn-send" (tap)="onSubmit('complete')"></Button>
             </StackLayout>
 
         </StackLayout>
