--- a/aclap/src/app/components/section-shared/display/display-files/display-files.component.tns.scss
+++ b/aclap/src/app/components/section-shared/display/display-files/display-files.component.tns.scss
@@ -22,19 +22,22 @@ $l-grey: #d3d8d8;
     color: #1c81a9;
     text-align: center;
     margin-top: 20;
+    font-family: 'Proxima_Bold', 'Proxima_Bold';
 }
 
 .header-text{
-    font-size: 24;
+    font-size: 36;
     font-weight: bold;
-    color: #ffffff;
+    color: #fff;
     text-align: center;
+    font-family: 'Proxima_Bold', 'Proxima_Bold';
 }
 
 .size-text{
     font-size: 12;
     color: #596668;
     text-align: center;
+    font-family: 'Proxima_Bold', 'Proxima_Bold';
 }
 
 .download-img{
