--- a/aclap/src/app/components/section-shared/display/displayer/displayer.component.tns.scss
+++ b/aclap/src/app/components/section-shared/display/displayer/displayer.component.tns.scss
@@ -10,18 +10,35 @@ $l-grey: #d3d8d8;
     color: #fff;
 }
 
-.text{
-    font-size: 12;
+.body-text{
+    font-size: 14;
     color: rgb(0, 0, 0);
     text-align: center;
+    margin-left: 10;
+    margin-right: 10;
+    margin-bottom: 5;
+    margin-top: 5;
+    font-family: 'Lora_Regular', 'Lora_Regular';
 }
 
-.title-text{
-    font-size: 24;
+.activity-text{
+    font-size: 14;
+    color: rgb(0, 0, 0);
+    text-align: left;
+    margin-left: 15;
+    margin-right: 10;
+    margin-bottom: 5;
+    margin-top: 5;
+    font-family: 'Lora_Regular', 'Lora_Regular';
+}
+
+.header-text{
+    font-size: 36;
     font-weight: bold;
     background-color: #1c81a9;
     color: rgb(255, 255, 255);
     text-align: center;
+    font-family: 'Proxima_Bold', 'Proxima_Bold';
 }
 
 .title-activity{
@@ -29,23 +46,36 @@ $l-grey: #d3d8d8;
     font-weight: bold;
     color: #1c81a9;
     text-align: center;
+    font-family: 'Proxima_Bold', 'Proxima_Bold';
 }
 
-.text-time{
+.time-text{
     font-size: 12;
     color: #596668;
     text-align: center;
+    font-family: 'Lora_Regular', 'Lora_Regular';
 }
 
-.subtitle-text{
+.reference-text{
+    font-size: 10;
+    color: #000000;
+    text-align: center;
+    font-family: 'Lora_Regular', 'Lora_Regular';
+}
+
+.title-text{
     font-size: 18;
     font-weight: bold;
     color: rgb(0, 0, 0);
     text-align: center;
+    font-family: 'Proxima_Bold', 'Proxima_Bold';
 }
 
-.sub-subtitle-text{
-    font-size: 14;
+.subtitle-text{
+    color: #000000;
     font-weight: bold;
-    color: rgb(0, 0, 0);
+    font-size: 14;
+    margin-left: 15;
+    text-align: left;
+    font-family: 'Proxima_Bold', 'Proxima_Bold';
 }
