--- a/aclap/src/app/components/shared/login/login.component.tns.scss
+++ b/aclap/src/app/components/shared/login/login.component.tns.scss
@@ -25,6 +25,7 @@ $l-grey: #d3d8d8;
   background-color: #Ef6423;
   font-size: 16;
   width: 90%;
+  font-family: 'Proxima_Bold', 'Proxima_Bold';
 }
   
 .password-recov-text-link {
