Fixing firebase bugs

--- a/aclap/src/app/components/app.component.scss
+++ b/aclap/src/app/components/app.component.scss
@@ -91,6 +91,6 @@ p, span, label{
     font-family: 'Lora' !important;
 }
 
-h1, h2, h3, h4, h5, li, a, button {
+h1, h2, h3, h4, h5, li, a, button, .highlight {
     font-family: "Proxima Nova";
 }
