--- a/aclap/src/app/components/shared/login/login.component.html
+++ b/aclap/src/app/components/shared/login/login.component.html
@@ -26,7 +26,7 @@
                     </form>
                     <div class="row">
                         <div class="col">
-                            <span>Olvidó su contraseña? <a href=""> Presione aquí </a></span>
+                            <span>Olvidó su contraseña? <a [routerLink]="['/recuperar-contrasena']"> Presione aquí </a></span>
                         </div>
                     </div>
                 </div>
