--- a/aclap/src/app/components/shared/restore-password/restore-password.component.html
+++ b/aclap/src/app/components/shared/restore-password/restore-password.component.html
@@ -15,7 +15,7 @@
                             <input type="text" formControlName="email" class="form-control"/>
                         </div>
                         <div class="form-group">
-                            <button class="btn btn-white">
+                            <button class="btn btn-white" (click)="onSubmit()">
                                 Solicitar 
                             </button>
                         </div>
