--- a/aclap/src/app/components/profile-shared/educator-application/educator-application.component.html
+++ b/aclap/src/app/components/profile-shared/educator-application/educator-application.component.html
@@ -12,7 +12,7 @@
                 <p> <strong>Organización:</strong> {{application.organization}} </p>
             </div>
             <div class="row">
-                <p> <strong> Fecha: </strong> {{ application.issued | date : 'short' }} </p>
+                <p> <strong> Fecha: </strong> {{ callDate(application.issued) | date : 'short' }} </p>
             </div>
         </div>
         <div class="col-md-4">
