--- a/aclap/src/app/components/shared/register/register.component.html
+++ b/aclap/src/app/components/shared/register/register.component.html
@@ -13,7 +13,7 @@
     <div class="card shadow mb-4 mt-3">
         <div class="card-header">
             <div class="card-title">
-                <h5>Complete este formulario para registrarse como Persona Eucadora</h5>
+                <h5>Complete este formulario para registrarse como Persona Educadora</h5>
             </div>
         </div>
         <div class="card-body">
