--- a/aclap/src/app/components/shared/img-header/img-header.component.html
+++ b/aclap/src/app/components/shared/img-header/img-header.component.html
@@ -2,7 +2,7 @@
 <div class="jumbotron jumbotron-fluid header-image d-flex align-items-end info flex-column bd-highlight mb-3"[ngStyle]="{backgroundImage:'url('+ bg_img +')'}">
     <div class="row fill">
         <div class="col mt-auto p-0 bd-highlight d-flex align-">
-            <span class="bd-highlight title"> Fotografía: {{ credit }} / PNUD-Costa Rica </span>
+            <span class="bd-highlight title"> Fotografía: {{ credit }} </span>
         </div>
     </div>
 </div>
