--- a/aclap/src/app/components/shared/img-header/img-header.component.scss
+++ b/aclap/src/app/components/shared/img-header/img-header.component.scss
@@ -10,6 +10,9 @@ h5{
     font-size: 12px;
 }
 
+span{
+    font-size: smaller;
+}
 
 .title{
     backdrop-filter: blur(5px)  brightness(50%) drop-shadow(4px 4px 10px black);
