--- a/aclap/src/app/components/shared/login/login.component.html
+++ b/aclap/src/app/components/shared/login/login.component.html
@@ -11,7 +11,7 @@
                 <div class="mb-5 card-body">
                     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                         <div class="form-group">
-                            <label for="username">E-mail</label>
+                            <label for="username">Correo electrónico</label>
                             <input type="text" formControlName="username" class="form-control"/>
                         </div>
                         <div class="form-group">
