--- a/aclap/src/app/components/profile-shared/profile/profile.component.tns.scss
+++ b/aclap/src/app/components/profile-shared/profile/profile.component.tns.scss
@@ -107,7 +107,7 @@ $l-grey: #d3d8d8;
     width: 40;
     color: #ffffff;
     font-size: 18;
-    font-family: "Font Awesome 5 Free", "fa-solid-900";
+    font-family: "Font Awesome 5 Free", "fa_solid_900";
 }
 
 .btn-edit {
@@ -118,7 +118,7 @@ $l-grey: #d3d8d8;
     margin-right: 50;
     color: #ffffff;
     font-size: 18;
-    font-family: "Font Awesome 5 Free", "fa-solid-900";
+    font-family: "Font Awesome 5 Free", "fa_solid_900";
 }
 
 .btn-implRemover {
