Create Module, Edit Module, Implementation... bugs -  fixed

--- a/aclap/src/app/components/profile-shared/implementation-edit/implementation-edit.component.html
+++ b/aclap/src/app/components/profile-shared/implementation-edit/implementation-edit.component.html
@@ -62,7 +62,7 @@
                     <div class="col-xl-10">
                         <input type="number" formControlName=maleParticipants class="form-control" [(ngModel)]="implementation.maleParticipants">
                     </div>
-                    <label for="otherParticipants" class="col-xl-2 col-form-label"> Otro </label>
+                    <label for="otherParticipants" class="col-xl-2 col-form-label"> Otros </label>
                     <div class="col-xl-10">
                         <input type="number" formControlName=otherParticipants class="form-control" [(ngModel)]="implementation.otherParticipants">
                     </div>
