--- a/aclap/src/app/components/event-shared/create-event/create-event.component.html
+++ b/aclap/src/app/components/event-shared/create-event/create-event.component.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-md-12">
-                        <app-edit-displayer [sections]=sections></app-edit-displayer>
+                        <app-edit-displayer [sections]=sections [imageProxy]="imageProxy"></app-edit-displayer>
                     </div>
                 </div>
                 <div class="row">
