--- a/aclap/src/app/components/module-shared/create-module/create-module.component.html
+++ b/aclap/src/app/components/module-shared/create-module/create-module.component.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-md-12">
-                        <app-edit-displayer [sections]=sections></app-edit-displayer>
+                        <app-edit-displayer [sections]=sections [imageProxy]="imageProxy"></app-edit-displayer>
                     </div>
                 </div>
                 <div class="row">
