--- a/aclap/src/app/components/module-shared/module-edit/module-edit.component.html
+++ b/aclap/src/app/components/module-shared/module-edit/module-edit.component.html
@@ -25,12 +25,12 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-12 col-xl-10">
-                        <app-edit-questions [questions]="questions" ></app-edit-questions>
+                        <app-edit-questions [questions]="questions" [deleted]="deletedQuestions" ></app-edit-questions>
                     </div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-12 col-xl-10">
-                        <app-edit-displayer [sections]=sections [imageProxy]="imageProxy"></app-edit-displayer>
+                        <app-edit-displayer [sections]=sections [imageProxy]="imageProxy" [deletedSections]="deletedSections"></app-edit-displayer>
                     </div>
                 </div>
                 <div class="row">
