--- a/aclap/src/app/components/profile-shared/implementable-implementations/implementable-implementations.component.html
+++ b/aclap/src/app/components/profile-shared/implementable-implementations/implementable-implementations.component.html
@@ -21,7 +21,7 @@
         </div>
     </div>
 </div>
-<div class="container">
+<div class="container" id="main-content">
     <div class="row">
         <div class="col-12 d-flex justify-content-center">
             <h1> Implementaciones de {{ implementable }}  </h1>
