--- a/aclap/src/app/components/profile-shared/implementation-display/implementation-display.component.html
+++ b/aclap/src/app/components/profile-shared/implementation-display/implementation-display.component.html
@@ -27,33 +27,41 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-6">
-            <div class="row">
-                <div class="col-6">
-                    <span> Nombre de la persona educadora: {{ implementation.educatorName }} {{ implementation.educatorLastname }} </span>
-                </div>  
-                <div class="col-6">
-                    <span> implementación de: {{ implementation.implementableName }} </span>
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="card-title"> Información general </h3>
+                </div>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-6">
+                            <span> Nombre de la persona educadora: {{ implementation.educatorName }} {{ implementation.educatorLastname }} </span>
+                        </div>  
+                        <div class="col-6 d-flex justify-content-end">
+                            <span> implementación de: {{ implementation.implementableName }} </span>
+                        </div>
+                    </div>
+                    <div class="row my-2">
+                        <div class="col-12 d-flex justify-content-center mt-1">
+                            <span> <strong> Participantes </strong> </span>
+                        </div>
+                        <div class="col">
+                            <span class="text-justify">Mujeres: {{ implementation.femaleParticipants}} </span>
+                        </div>
+                        <div class="col d-flex justify-content-center">
+                            <span>Hombres: {{implementation.maleParticipants}} </span>
+                        </div>  
+                        <div class="col d-flex justify-content-end">
+                            <span class="text-justify">Otros: {{ implementation.otherParticipants}} </span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <span>Fecha: {{ implementation.date}} </span>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-12 d-flex justify-content-center">
-                    <span> <strong> Participantes </strong> </span>
-                </div>
-                <div class="col">
-                    <span class="text-justify">Mujeres: {{ implementation.femaleParticipants}} </span>
-                </div>
-                <div class="col">
-                    <span class="text-justify">Hombres: {{implementation.maleParticipants}} </span>
-                </div>  
-                <div class="col">
-                    <span class="text-justify">Otros: {{ implementation.otherParticipants}} </span>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <span>Fecha: {{ implementation.date}} </span>
-                </div>
-            </div>
+            
             <div class="row">
                 <div class="col-12">
                     <h3>Preguntas de evaluación</h3>
